--- a/app/packages/app/src/components/Modal/Group.module.css
+++ b/app/packages/app/src/components/Modal/Group.module.css
@@ -4,22 +4,34 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+}
+
+.mainGroup {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .group {
-  border-top: 1px solid var(--background-dark-border);
   position: relative;
+  flex-direction: column;
   flex-grow: 1;
   display: flex;
-  width: 100%;
-}
-
-.groupSample {
-  position: relative;
   width: 100%;
   height: 100%;
 }
 
+.groupSample {
+  position: relative;
+  flex-grow: 1;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-bottom: 3px solid var(--background-dark-border);
+}
+
 .groupSampleActive {
-  border-bottom: 2px solid var(--brand);
+  border-bottom: 3px solid var(--brand);
 }
