--- a/app/packages/looker/src/elements/common/json.module.css
+++ b/app/packages/looker/src/elements/common/json.module.css
@@ -2,11 +2,10 @@
  * Copyright 2017-2022, Voxel51, Inc.
  */
 
-.lookerJSONPanel,
-.lookerJSONPanel > div,
-.lookerJSONPanel > div > div {
+.lookerJSONPanel {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .lookerJSONPanel pre {
