--- a/app/packages/looker/src/elements/common/panel.module.css
+++ b/app/packages/looker/src/elements/common/panel.module.css
@@ -3,7 +3,6 @@
  */
 
 .lookerPanel {
-  margin: 3rem;
   padding: 1rem;
   line-height: 1;
   font-weight: bold;
@@ -15,6 +14,7 @@
   overflow: auto;
   scrollbar-width: none;
   position: relative;
+  pointer-events: all;
 }
 
 .lookerPanel::-webkit-scrollbar {
@@ -37,12 +37,15 @@
   position: absolute;
   overflow: hidden;
   z-index: 10000;
+  pointer-events: none;
 }
 
 .lookerPanelVerticalContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+  margin: 3.5rem;
 }
 
 .lookerPanelHeader {
